...
        "19" to "Melilla"
    )

    val PRODUCTOS = listOf(
        ProductoEntity(1, "Gasolina 95 E5", "Gasolina"),
        ProductoEntity(3, "Gasolina 98 E5", "Gasolina"),
        ProductoEntity(4, "Gasoleo A", "Gasóleo"),
        ProductoEntity(5, "Gasoleo Premium", "Gasóleo"),
        ProductoEntity(6, "Gasoleo B", "Gasóleo"),
        ProductoEntity(8, "Biodiesel", "Biodiesel"),
        ProductoEntity(16, "Bioetanol", "Bioetanol"),
        ProductoEntity(17, "Gases licuados del petróleo", "GLP"),
        ProductoEntity(18, "Gas Natural Comprimido", "GNC"),
...
